more work on drugs page

--- a/homepage/templates/base.htm
+++ b/homepage/templates/base.htm
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <head>
 
-        <title>US Opiate Statistics &mdash; <%block name="title"></%block></title>
+        <title>USOS &mdash; <%block name="title"></%block></title>
 
         ## add any site-wide scripts or CSS here; for example, jquery:
         <script src="${ STATIC_URL }homepage/media/jquery-3.3.1.js"></script>
