--- a/prescriber/templates/index.html
+++ b/prescriber/templates/index.html
@@ -5,6 +5,7 @@
 <%block name="center_column">
 <div class="content">
     <h3>${ dr.fname } ${ dr.lname }</h3>  
+    <br>
         <div class="row">
             <div class="col"> 
                 <table>
@@ -35,7 +36,7 @@
                         </tr>
                         %for m in medications:
                             <tr>
-                                <td>${ m.drug }</td>
+                                <td><a href="/drug/${ m.drug }">${ m.drug }</a></td>
                                 <td>${ m.qty }</td>
                             </tr>
                         %endfor
