--- a/prescriber/templates/index.html
+++ b/prescriber/templates/index.html
@@ -36,7 +36,7 @@
                         </tr>
                         %for m in medications:
                             <tr>
-                                <td><a href="/drug/${ m.drug }">${ m.drug }</a></td>
+                                <td><a href="/drug/index/${ m.drug }">${ m.drug }</a></td>
                                 <td>${ m.qty }</td>
                             </tr>
                         %endfor
